# EHRSystem

./: .coverage  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  DAY10_ACCEPTANCE_TEST_CHECKLIST.md  DAY10_TEST_RESULTS.md  Dockerfile  IMPLEMENTATION_PLAN_1_5_WEEKS.md  PRESENTATION.md  PRESENTATION_EXECUTIVE_SUMMARY.md  PRESENTATION_VISUAL_GUIDE.md  README.md  docker-compose.staging.yml  docker-compose.yml  package-lock.json  playwright.frontend.config.ts  pyproject.toml  render.yaml
db/: import_healthcare_dataset.sql  schema.sql
docs/: adr.md  assumptions_scope.md  data_design.md  data_storage_retrieval_testing.md  day10_engineer_a_checkpoint.md  day10_engineer_b_checkpoint.md  day10_ux_signoff.md  day1_engineer_a_checkpoint.md  day1_engineer_b_checkpoint.md  day1_frontend_completion_summary.md  day1_frontend_deliverables.md  day2_engineer_a_checkpoint.md  day2_engineer_b_checkpoint.md  day2_frontend_quick_reference.md  day2_joint_checkpoint.md  day3_engineer_a_checkpoint.md  day3_engineer_b_checkpoint.md  day4_engineer_a_checkpoint.md  day4_engineer_b_checkpoint.md  day5_engineer_a_checkpoint.md  day5_engineer_b_checkpoint.md  day6_api_contract_lock_checklist.md  day6_engineer_a_checkpoint.md  day6_engineer_b_checkpoint.md  day7_engineer_a_checkpoint.md  day7_engineer_b_checkpoint.md  day8_engineer_a_checkpoint.md  day8_engineer_b_checkpoint.md  day8_frontend_implementation_summary.md  day9_engineer_a_checkpoint.md  day9_engineer_b_checkpoint.md  deployment_render_uptimerobot.md  encryption_hardening.md  engineer_a_b_startup_guide.md  logging.md  (+6 more)
(+123 files in other folders)
